# VCProfileViewer-Biegewinkel-Linux

./: .gitignore  BUILD_ANLEITUNG.md  CMakeLists.txt  LICENSE.txt  README.md  SECURITY.md  VC3DProfileViewer.pro  install.sh
.github/workflows/: build.yml  build2.yml
include/: jsonplayer.h  keygen_config.h.in  licensedialog.h  licensemanager.h  mainwindow.h  measurementlogger.h  profilewidget.h  sensorworker.h  types.h  vcprotocol.h
resources/: app.rc  resources.qrc
src/: jsonplayer.cpp  licensedialog.cpp  licensemanager.cpp  main.cpp  mainwindow.cpp  measurementlogger.cpp  profilewidget.cpp  sensorworker.cpp  vcprotocol.cpp
tests/data/: LaserLineData_20260409_191643551.json  LaserLineData_20260409_191643570.json  LaserLineData_20260409_191643575.json  LaserLineData_20260409_191643581.json  LaserLineData_20260409_191643589.json  LaserLineData_20260409_191643602.json  LaserLineData_20260409_191643614.json  LaserLineData_20260409_191643621.json  LaserLineData_20260409_191643627.json  LaserLineData_20260409_191643643.json  LaserLineData_20260409_191643649.json  LaserLineData_20260409_191643653.json  LaserLineData_20260409_191643658.json  LaserLineData_20260409_191643664.json  LaserLineData_20260409_191643682.json  LaserLineData_20260409_191643689.json  LaserLineData_20260409_191643696.json  LaserLineData_20260409_191643702.json  LaserLineData_20260409_191643716.json  LaserLineData_20260409_191643721.json
